--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3>Destructuring</h3>
       <button onclick="destructuring_ex()">Click</button>
     </section>
-
+<section></section>
     <section>
       <div id="form">
         <div class="input-form">
