--- a/src/pages/lab/lab-2.html
+++ b/src/pages/lab/lab-2.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/dist/index.js"></script>
+    <script src="/dist/pages/lab/lab-2.js"></script>
+    <script src="/dist/pages/lab/lab-3.js"></script>
   </body>
 </html>
