--- a/src/pages/lab/lab-4.html
+++ b/src/pages/lab/lab-4.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/dist/index.js"></script>
+    <button onclick="handleCRUD()">Click để chọn chức năng</button>
+    <script src="/dist/pages/lab/lab-4.js"></script>
   </body>
 </html>
