--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/dist/index.js"></script>
+    <script src="/dist/app.js"></script>
   </body>
 </html>
