--- a/pages/auth/login/login.html
+++ b/pages/auth/login/login.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script type="module" src="./login.event.js"></script>
   </head>
   <body>
-    <header>
-      <button><a href="./auth/login/">Login</a></button>
-    </header>
-    <!-- Những method dùng chung -->
-    <script src="./utils/method.js"></script>
+    <h1>Hello login</h1>
+    <button class="" onclick="onLogin()">Login</button>
   </body>
 </html>
