--- a/pages/auth/register/index.html
+++ b/pages/auth/register/index.html
@@ -6,10 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <button><a href="./auth/login/">Login</a></button>
-    </header>
-    <!-- Những method dùng chung -->
-    <script src="./utils/method.js"></script>
+    <h1>Hello register</h1>
   </body>
 </html>
