--- a/pages/user/cart/history.html
+++ b/pages/user/cart/history.html
@@ -5,11 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <header>
-      <button><a href="./auth/login/">Login</a></button>
-    </header>
-    <!-- Những method dùng chung -->
-    <script src="./utils/method.js"></script>
-  </body>
+  <body></body>
 </html>
