--- a/pages/auth/login/login.html
+++ b/pages/auth/login/login.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <h1>Hello login</h1>
-    <button class="" onclick="onLogin()">Login</button>
+
+    <div id="form-auth">
+      <div class="input-group">
+        <input type="text" name="email" />
+      </div>
+      <div class="input-group">
+        <input type="password" name="password" />
+      </div>
+
+      <div class="input-group">
+        <input type="submit" value="Login" />
+      </div>
+    </div>
+    <button class="" onclick="onLogin()" id="btn-login">Login</button>
   </body>
 </html>
