--- a/pages/auth/register/index.html
+++ b/pages/auth/register/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello register</h1>
+    <div id="form-auth">
+      <div class="input-group">
+        <input type="text" name="email" />
+      </div>
+      <div class="input-group">
+        <input type="password" name="password" />
+      
+      </div>
+    </div>
+    <button class="" onclick="onRegister()" id="btn-login" id="btn-register">
+      Register
+    </button>
+
+    <script type="module" src="./register.event.js"></script>
   </body>
 </html>
