--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <input type="text" name="name" />
+    <input type="text" name="email" />
+
+    <input type="text" name="username" />
+
+    <script src="/dist/index.js"></script>
+    <script src="/dist/on-tap.js"></script>
+  </body>
 </html>
