--- a/pages/auth/login/index.html
+++ b/pages/auth/login/index.html
@@ -6,13 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <form
-      action="
-    "
-    >
+    <form id="form-login">
       <div class="input-group">
         <label for=""></label>
-        <input type="text" />
+        <input type="text" name="email" />
+      </div>
+      <div class="input-group">
+        <label for=""></label>
+        <input type="text" name="password" />
       </div>
 
       <div class="input-group">
